--- a/src/styles/RecoveryPassword.scss
+++ b/src/styles/RecoveryPassword.scss
@@ -1,106 +1,71 @@
-@import "vars";
+@import 'vars';
 
-:root {
-    --white: #FFFFFF
-    --black:#000000;
-    --very-light-pink: #C7C7C7;
-    --text-input-field: #F7F7F7;
-    --hospital-green: #acd9b2;
-    --sm: 14px;
-    --md: 16px;
-    --lg: 18px;
-}
-body {
-    font-family: 'Quicksand', sans-serif;
-    margin: 0;
+.title {
 
+    text-align: center !important;
 }
-.login {
-width:100%;
-height: 100vh;
-display: grid;
-place-items: center;
-}
-.form-container{
-display: grid;
-grid-template-rows: auto 1fr
-auto;
-width: 300px;
-justify-items: center;
 
+.RecoveryPassword {
+	width: 100%;
+	height: 100vh;
+	display: grid;
+	place-items: center;
+    
+}
+.RecoveryPassword-container {
+	display: grid;
+	grid-template-rows: auto 1fr auto;
+	width: 300px;
+    
 }
 .logo {
-width: 150px;
-margin-bottom: 48px;
-justify-self: center;
-display: none;
+	width: 150px;
+	margin-bottom: 48px;
+	justify-self: center;
+	display: none;
 }
-.title {
-font-size: var(--lg);
-margin-bottom: 12px;
-text-align: center;
-
-
-}
-.subtitle {
-color: var(--very-light-pink);
-font-size: var(--md);
-font-weight: 300;
-margin-top: 0;
-margin-bottom: 32px;
-text-align: center;
+.form {
+	display: flex;
+	flex-direction: column;
 }
 
-.email-image {
-width: 132px;
-height: 132px;
-border-radius: 50%;
-background-color: var(--text-input-field);
-display: flex;
-justify-content: center;
-align-items: center;
-margin-bottom: 24px;
-
-}
-.email-image {
-img {
-width: 80px;
-
-}
-}
-.resend{
-font-size: var(--sm);
-
+.label {
+	font-size: var(--sm);
+	font-weight: bold;
+	margin-bottom: 4px;
 }
 
-.resend span {
-color: var(--very-light-pink);
+.input-email {
+	margin-bottom: 22px;
 }
-.resend a {
-color: var(--hospital-green);
-text-decoration: none;
-
-}
-
-
 .primary-button {
-background-color: var(--hospital-green);
-border-radius: 8px;
-border: none;
-color: var(--white);
-width: 100%;
-cursor: pointer;
-font-size: var(--md);
-font-weight: bold;
-height: 50px;
+	background-color: var(--hospital-green);
+	border-radius: 8px;
+	border: none;
+	color: var(--white);
+	width: 100%;
+	cursor: pointer;
+	font-size: var(--md);
+	font-weight: bold;
+	height: 50px;
+}
+.secondary-button {
+	background-color: var(--white);
+	border-radius: 8px;
+	border: 1px solid var(--hospital-green);
+	color: var(--hospital-green);
+	width: 100%;
+	cursor: pointer;
+	font-size: var(--md);
+	font-weight: bold;
+	height: 50px;
 }
 .login-button {
-margin-top: 14px;
-margin-bottom: 30px;
+	margin-top: 14px;
+	margin-bottom: 30px;
 }
 @media (max-width: 640px) {
-.logo {
-display: block;
-}
-
+	.logo {
+		display: block;
+	}
 }
