--- a/src/styles/ProductItem.scss
+++ b/src/styles/ProductItem.scss
@@ -43,10 +43,10 @@
     grid-template-columns: 
     repeat(auto-fill, 140px);
      }
-    .product-card {
+    .ProductItem {
     width: 140px;
 }
-    .product-card img {
+    .ProductItem img {
     width: 140px;
     height: 140px;
  }
