--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,5 +1,12 @@
 @import "vars";
 
+nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 24px;
+    border-bottom: 1px solid var(--very-light-pink);
+}
+
 .menu {
     display: none;
 }
@@ -12,17 +19,13 @@
 .navbar-right ul {
     list-style: none;
     padding: 0;
-    margin: 0px;
+    margin: 0;
     display: flex;
     align-items: center;
     height: 60px;
 
 }
-nav {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 24px;
-}
+
 .navbar-left {
     display: flex;
 }
@@ -40,9 +43,10 @@ nav {
 }
 .navbar-left ul li a:hover,
 .navbar-right ul li a:hover {
-    text-decoration: none;
+    border: 1px solid var(--hospital-green);   
     color: var(--hospital-green);
-    border: 1px solid var(--hospital-green); 
+  
+    
 }
 .navbar-email {
     color: var(--very-light-pink);
