--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -1,69 +1,39 @@
-@import "vars";
+@import 'vars';
 
-.menu {
-    display: none;
-}
-.logo {
-    width: 100px;
-    
 
-}
-.navbar-left ul,
-.navbar-right ul {
-    list-style: none;
-    padding: 0;
-    margin: 0px;
-    display: flex;
-    align-items: center;
-    height: 60px;
-
-}
-nav {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 24px;
-}
-.navbar-left {
-    display: flex;
-}
-.navbar-left ul {
-    margin-left: 12px;
-}
-.navbar-left ul li a,
-.navbar-right ul li a {
-    text-decoration: none;
-    color: var(--very-light-pink);
-    border: 1px solid var(--white);
-    padding: 8px;
-    border-radius: 8px;
-
-}
-.navbar-left ul li a:hover,
-.navbar-right ul li a:hover {
-    text-decoration: none;
-    color: var(--hospital-green);
-    border: 1px solid var(--hospital-green); 
-}
-.navbar-email {
-    color: var(--very-light-pink);
-    font-size: var(--sm);
-    margin-right: 12px;
-}
-
-.nav-bar-shopping-cart {
-    position: relative;
-}
-.nav-bar-shopping-cart  div {
-    width: 16px;
-    height: 16px;
-    background-color: var(--hospital-green);
-    border-radius: 50%;
-    font-size: var(--sm);
-    font-weight: bold;
+.Menu {
+	width: 100px;
+	height: auto;
+	border: 1px solid var(--very-light-pink);
+	border-radius: 6px;
+	padding: 20px 20px 0 20px;
     position: absolute;
-    top: -5px;
-    right: -3px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    top: 60px;
+    right: 50px;
+}
+.Menu ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+.Menu ul li {
+	text-align: end;
+}
+.Menu ul li:nth-child(1),
+.Menu ul li:nth-child(2) {
+	font-weight: bold;
+}
+.Menu ul li:last-child {
+	padding-top: 20px;
+	border-top: 1px solid var(--very-light-pink);
+}
+.Menu ul li:last-child a {
+	color: var(--hospital-green);
+	font-size: var(--sm);
+}
+.Menu ul li a {
+	color: var(--back);
+	text-decoration: none;
+	margin-bottom: 20px;
+	display: inline-block;
 }
